# gkit

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  docs.yml  release.yml  winget.yml
crates/gkit-cli/: Cargo.toml
crates/gkit-cli/src/: main.rs
crates/gkit-cli/tests/: cli.rs  net.rs
crates/gkit-cli/tests/common/: mod.rs
crates/gkit-core/: Cargo.toml
crates/gkit-core/src/: checks.rs  clone.rs  conf.rs  config.rs  fixsub.rs  git.rs  key.rs  lib.rs  report.rs  stamp.rs  stmb.rs  submodules.rs
docs/: book.toml
docs/src/: SUMMARY.md  commands.md  configuration.md  design.md  installation.md  introduction.md  quick-start.md  why-gkit.md
docs/src/commands/: clone.md  fixsub.md  init.md  key.md  logoff.md  stamp.md  stmb.md
