[package]
name = "gkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/teeckoo/gkit"
description = "gkit — a transparent git/ssh toolkit: ssh keys, hooked clone, log-off check, stmb"
keywords = ["git", "ssh", "cli", "submodule", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
# version is REQUIRED so `cargo publish` can resolve gkit-core from crates.io
gkit-core = { path = "../gkit-core", version = "0.7.0" }
